--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "@vercel/blob": "^2.0.0",
     "canvas-confetti": "^1.9.2",
     "next": "14.0.4",
     "nodemailer": "^6.9.7",
