Add email template system, CSV code upload, and admin improvements
- Implemented customizable email template system with preview
- Added CSV upload functionality for codes
- Integrated Resend email service with template support
- Enhanced code management with bulk actions
- Added collapsible sections for better UI organization
- Updated email templates for winner notifications
- Added email template seeding script
- Created documentation for email template system

--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@prisma/client": "^5.8.0",
     "canvas-confetti": "^1.9.2",
     "next": "14.0.4",
-    "nodemailer": "^6.9.7",
     "pg": "^8.16.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
