--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,14 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/ateres_kallah_spin"
 
 # Admin Authentication
+ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="your-secure-admin-password"
 SESSION_SECRET="your-random-secret-key-for-session-encryption"
 
-# Email Configuration
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASSWORD="your-app-password"
-ADMIN_EMAIL="admin@example.com"
+# Email Configuration - Resend (Recommended)
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxx"  # Get from https://resend.com/api-keys
+EMAIL_FROM="Ateres Kallah <noreply@yourdomain.com>"  # Must be from verified domain
+ADMIN_EMAIL="admin@example.com"  # Where to receive winner notifications
 
 # App Configuration
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
