Fix email template URL - update .env.example with production domain

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ EMAIL_FROM="Ateres Kallah <noreply@yourdomain.com>"  # Must be from verified dom
 ADMIN_EMAIL="admin@example.com"  # Where to receive winner notifications
 
 # App Configuration
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL="https://spin2win-ak.org"  # Production: https://spin2win-ak.org | Development: http://localhost:3000
