--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.2",
     "next": "14.0.4",
     "pg": "^8.16.3",
