Optimize /highlights page: DB queries, rate limiting, and reCAPTCHA
- Optimized checkEmailAccess() to use Prisma _count instead of loading all views
- Optimized recordView() to eliminate redundant queries (33% reduction)
- Added rate limiting to video access endpoints (10 attempts/15min)
- Integrated reCAPTCHA v3 for bot protection
- Added comprehensive documentation
- Updated .env.example with reCAPTCHA configuration

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ ADMIN_EMAIL="admin@example.com"  # Where to receive winner notifications
 
 # App Configuration
 NEXT_PUBLIC_APP_URL="https://spin2win-ak.org"  # Production: https://spin2win-ak.org | Development: http://localhost:3000
+
+# reCAPTCHA v3 (Optional - for bot protection on video access)
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"  # Get from https://www.google.com/recaptcha/admin
+RECAPTCHA_SECRET_KEY="your-recaptcha-secret-key"  # Server-side secret key
